# jaffle-shop-expand

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements.in  requirements.txt  target-base
analyses/: cohort_analysis_query.sql  customer_lifetime_distribution.sql  revenue_forecast_simple.sql
data-tests/: assert_customer_has_orders.sql  assert_no_negative_order_totals.sql  assert_total_revenue_positive.sql
macros/: bucket_values.sql  classify_trend.sql  date_spine_daily.sql  day_of_week_number.sql  deduplicate.sql  flag_outlier.sql  growth_rate.sql  percentile_score.sql  period_over_period.sql  pivot_column.sql  rolling_average.sql  running_total.sql  safe_divide.sql  surrogate_key_hash.sql  unpivot_columns.sql  weighted_score.sql
macros/tests/: test_not_in_future.sql  test_referential_integrity.sql  test_valid_percentage.sql
models/: _groups.yml  docs.md
models/marts/: _exposures.yml  customers.sql  metricflow_time_spine.yml  order_items.sql  orders.sql  products.sql
models/staging/: __sources.yml  stg_customers.sql  stg_customers.yml  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_products.yml  stg_supplies.sql
models/utilities/: _utilities__models.yml  util_date_spine.sql  util_fiscal_periods.sql  util_product_active_dates.sql  util_store_calendar.sql
seeds/finance-data/: raw_accounts_receivable.csv  raw_budgets.csv  raw_expense_categories.csv  raw_expenses.csv  raw_gift_cards.csv  raw_invoices.csv  (+4 more)
snapshots/: snp_dim_employees.sql  snp_dim_menu_items.sql
(+941 files in other folders)
