[project]
name = "jaffle-shop-expanded"
version = "3.1.0"
description = "A medium-sized dbt project (~1000 models) for testing dbt tools"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.10.0",
    "dbt-duckdb>=1.10.0",
    "dbt-snowflake>=1.10.0",
    "jafgen>=0.4.12",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "requests>=2.32.0",
]
